003阶段需求完成

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,12 +1,24 @@
 # LLM API Keys
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-GOOGLE_API_KEY=your_google_api_key_here
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# Get your API keys from the respective provider's console:
+# - OpenAI: https://platform.openai.com/api-keys
+# - Anthropic: https://console.anthropic.com/
+# - Google: https://makersuite.google.com/app/apikey
+# - DeepSeek: https://platform.deepseek.com/
+OPENAI_API_KEY=sk-
+ANTHROPIC_API_KEY=sk-ant-
+GOOGLE_API_KEY=
+DEEPSEEK_API_KEY=
+
+# Custom LLM Endpoints (optional)
+# You can use custom LLM endpoints by specifying these in the Agent configuration
+# when creating a debate. Set the model_provider to "custom" and provide:
+# CUSTOM_API_KEY=your_custom_api_key
+# CUSTOM_BASE_URL=https://api.example.com/v1
 
 # LangSmith (可选，用于 Agent 追踪)
+# Enable tracing to monitor LangChain agent execution
 LANGCHAIN_TRACING_V2=false
-LANGCHAIN_API_KEY=your_langsmith_api_key_here
+LANGCHAIN_API_KEY=lsv2_
 LANGCHAIN_PROJECT=debate-agents
 
 # 数据库
