--- a/package.json
+++ b/package.json
@@ -13,39 +13,43 @@
     "db:init": "tsx lib/db/init.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@langchain/anthropic": "^0.3.0",
+    "@langchain/core": "^0.3.0",
+    "@langchain/google-genai": "^2.1.0",
+    "@langchain/openai": "^0.3.0",
+    "better-sqlite3": "^11.0.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@langchain/core": "^0.3.0",
-    "@langchain/openai": "^0.3.0",
-    "@langchain/anthropic": "^0.3.0",
-    "@langchain/google-genai": "^2.1.0",
-    "better-sqlite3": "^11.0.0",
     "react-hook-form": "^7.53.0",
-    "@hookform/resolvers": "^3.9.0",
-    "zod": "^3.23.0",
-    "date-fns": "^4.1.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.5.0"
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^2.5.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
+    "@types/better-sqlite3": "^7.6.0",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/better-sqlite3": "^7.6.0",
-    "typescript": "^5.0.0",
+    "@vitest/ui": "^2.1.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.0",
+    "playwright": "^1.49.0",
+    "postcss": "^8.4.0",
     "prettier": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.0",
     "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "vitest": "^2.1.0",
-    "@vitest/ui": "^2.1.0",
-    "playwright": "^1.49.0",
-    "@playwright/test": "^1.49.0",
-    "tsx": "^4.19.0"
+    "tsx": "^4.19.0",
+    "typescript": "^5.0.0",
+    "vitest": "^2.1.0"
   },
   "engines": {
     "node": ">=20.0.0"
