feat: Implement voice and emotion expression feature with user stories and tasks
- Added feature specification for voice and emotion expression functionality.
- Created a comprehensive task list detailing phases of implementation.
- Established MVP scope focusing on basic voice playback functionality.
- Integrated Aliyun TTS service for voice generation and emotion analysis.
- Developed user stories with acceptance criteria for testing.
- Implemented database migrations for voice profiles, cache, and settings.
- Created API endpoints for voice generation, cache retrieval, and user settings.
- Designed front-end components for voice playback and user settings.

--- a/.env.local.example
+++ b/.env.local.example
@@ -24,6 +24,25 @@ LANGCHAIN_PROJECT=debate-agents
 # 数据库
 DATABASE_PATH=./data/debates.db
 
+# TTS 服务配置（阿里云通义千问）
+# 获取 API Key: https://dashscope.console.aliyun.com/
+ALIYUN_API_KEY=your_aliyun_api_key_here
+
+# 对象存储（用于存储生成的音频文件）
+# 注意：新 qwen3-tts-flash API 返回音频 URL 或 base64 数据，无需额外配置 OSS
+# 如需使用 OSS 存储缓存，可配置以下选项：
+# OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
+# OSS_ACCESS_KEY=your_oss_access_key
+# OSS_SECRET_KEY=your_oss_secret_key
+# OSS_BUCKET=debate-voices
+# OSS_PREFIX=voices/
+
+# 语音功能配置
+VOICE_DEFAULT_PROVIDER=aliyun  # aliyun | doubao | tencent
+VOICE_CACHE_ENABLED=true
+VOICE_CACHE_MAX_SIZE_MB=100
+VOICE_CACHE_TTL_DAYS=30
+
 # 应用配置
 NODE_ENV=development
 PORT=3000
