--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@langchain/openai": "^0.3.0",
     "better-sqlite3": "^11.0.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "howler": "^2.2.4",
+    "lucide-react": "^0.562.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@types/better-sqlite3": "^7.6.0",
+    "@types/howler": "^2.2.12",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
