--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.5.0",
+    "ws": "^8.18.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/ws": "^8.18.1",
     "@vitest/ui": "^2.1.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
@@ -57,5 +59,8 @@
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "optionalDependencies": {
+    "buffer-util": "npm:null@4"
   }
 }
